force-app/main/default/objects/Order/fields/Account_is_Company__c.field-meta.xml
<CustomField>
    <fullName>Account_is_Company__c</fullName>
    <formula>IF(Account.Is_Company__c = TRUE, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account is Company</label>
    <type>Checkbox</type>
</CustomField>