force-app/main/default/objects/Order/fields/Require_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Require_Invoice__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Require Invoice</label>
    <type>Checkbox</type>
</CustomField>