force-app/main/default/objects/Order/fields/VAT_Value__c.field-meta.xml
<CustomField>
    <fullName>VAT_Value__c</fullName>
    <label>VAT Value</label>
    <summarizedField>OrderItem.VAT_Value__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>