force-app/main/default/objects/Order/validationRules/OrderWithoutAddressCantBeSent.validationRule-meta.xml
<ValidationRule>
    <fullName>OrderWithoutAddressCantBeSent</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(ISPICKVAL(Status , &apos;Sent&apos;),
(ISBLANK(ShippingCity) = true),
(ISBLANK(ShippingCountry) = true),
(ISBLANK(ShippingPostalCode) = true),
(ISBLANK(ShippingState) = true),
(ISBLANK(ShippingStreet) = true))</errorConditionFormula>
    <errorMessage>Uzupełnij Shipping address</errorMessage>
</ValidationRule>